# 4dBevy

./: Cargo.toml
crates/chunks/: Cargo.toml
crates/chunks/src/: lib.rs
crates/render/: Cargo.toml  build.rs
crates/render/shaders/: full_screen_quad.slang  ray_tracing.slang
crates/render/shaders/include/: camera.slang  hyper_sphere.slang  material.slang  objects_info.slang  ray.slang  rotor.slang  transform.slang
crates/render/src/: camera.rs  hyper_sphere.rs  lib.rs  material.rs  ray_tracing.rs
crates/render/src/ray_tracing/: camera.rs  hyper_spheres.rs  materials.rs  result_texture.rs
crates/transform/: Cargo.toml
crates/transform/src/: lib.rs  rotor.rs  transform.rs
src/: main.rs  movement_control.rs
web/: index.html
