[package]
name = "bevy_4d"
version = "0.1.0"
edition = "2024"

[workspace]
resolver = "2"
members = ["crates/render", "crates/transform"]

[workspace.dependencies]
bevy = { version = "0.16", default-features = false, features = [
    "std",
    "async_executor",
    "bevy_asset",
    "bevy_log",
    "bevy_window",
    "bevy_winit",
    "multi_threaded",
] }
bytemuck = "1.23.0"
chunks = { path = "crates/chunks" }
render = { path = "crates/render" }
transform = { path = "crates/transform" }

[dependencies]
# Set max log levels. This helps avoid unwanted low-severity log spam, which can affect performance.
log = { version = "0.4", features = [
    "max_level_trace",
    "release_max_level_warn",
] }
tracing = { version = "0.1", features = [
    "max_level_trace",
    "release_max_level_warn",
] }

bevy = { workspace = true }
chunks = { workspace = true }
render = { workspace = true }
transform = { workspace = true }

# Idiomatic Bevy code often triggers these lints, and the CI workflow treats them as errors.
# In some cases they may still signal poor code quality however, so consider commenting out these lines.
[workspace.lints.clippy]
# Bevy supplies arguments to systems via dependency injection, so it's natural for systems to
# request more than 7 arguments -- which triggers this lint.
too_many_arguments = "allow"
# Queries that access many components may trigger this lint.
type_complexity = "allow"

[lints]
workspace = true

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Remove expensive debug assertions due to <https://github.com/bevyengine/bevy/issues/14291>
[profile.dev.package.wgpu-types]
debug-assertions = false

[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"
